src/tests/snapshots/cendol__tests__semantic_generic__generic_selection_invalid_type_name.snap
---
source: src/tests/semantic_generic.rs
expression: output
---
Diagnostics count: 1

Level: Error
Message: Unexpected token: expected declaration specifiers, found Identifier("NotARealType")
Span: SourceSpan(source_id=SourceId(2), start=112, end=124)
