src/tests/snapshots/cendol__tests__semantic_generic__generic_selection_no_match.snap
---
source: src/tests/semantic_generic.rs
expression: output
---
Diagnostics count: 1

Level: Error
Message: controlling expression type 'float' not compatible with any generic association
Span: SourceSpan(source_id=SourceId(2), start=49, end=77)
