src/tests/snapshots/cendol__tests__semantic_generic__generic_selection_pointer_to_const_vs_const_pointer.snap
---
source: src/tests/semantic_generic.rs
expression: mir
---
type %t0 = i32
type %t1 = i8
type %t2 = ptr<%t1>

fn main() -> i32
{
  locals {
    %ptr: ptr<i8>
  }

  bb1:
    return const 0
}
