src/tests/snapshots/cendol__tests__semantic_generic__generic_selection_rejects_duplicate_types.snap
---
source: src/tests/semantic_generic.rs
expression: output
---
Diagnostics count: 2

Level: Error
Message: type 'int' in generic association compatible with previously specified type 'int'
Span: SourceSpan(source_id=SourceId(2), start=41, end=68)

Level: Note
Message: previous association is here
Span: SourceSpan(source_id=SourceId(2), start=41, end=68)
