src/tests/snapshots/cendol__tests__semantic_generic__generic_selection_rejects_multiple_defaults.snap
---
source: src/tests/semantic_generic.rs
expression: output
---
Diagnostics count: 2

Level: Error
Message: duplicate default association in generic selection
Span: SourceSpan(source_id=SourceId(2), start=41, end=76)

Level: Note
Message: previous default association is here
Span: SourceSpan(source_id=SourceId(2), start=41, end=76)
